[tool.poetry]
name = "recorder-module-2"
version = "0.1.0"
description = ""
authors = ["pikamonvvs <pikamonvvs@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"
httpx = "^0.27.0"
requests = "^2.32.3"
types-requests = "^2.32.0.20240622"
streamlink = "^6.8.1"
httpx-socks = "^0.9.1"
ffmpeg-python = "^0.2.0"
h2 = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
